Fixed the Overflow Issue on Main Slider in Homepage

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ html, body {
 	height: 100%;
 }
 
+#home .container {
+	overflow: hidden;
+}
+
 /*#home .container > .intro {
 	padding: 16% 10% 0;
 	color: #fff;
